Changes for testing

--- a/javascript/lingoport/HelloWorld.html
+++ b/javascript/lingoport/HelloWorld.html
@@ -1,13 +1,14 @@
-<html lang="en">
+<html lang="ghgjg">
 
 <head>
-  <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1">
+  <meta http-equiv="Content-Type" content="utf-8">
+  <meta charset="ISO-8859">
   <title>I will display &#75; &#40; \&#43;\'s </title>
   <script src="./public/js/test.js"></script>
 </head>
 
 <body>
-  <h1>This is a title </h1>
+  <h1>This is a title  </h1>
 
   <button id='TestDate' onclick="dateMethod()">ClickMe</button>
   <pre id='dateResult'></pre> User Name:
@@ -17,6 +18,8 @@
 
   <button type="button" onclick="getRandomCharacter()">Random Character</button>
   <pre id="randomCharacter"></pre>
+
+  
 
 
   <script>
@@ -35,6 +38,9 @@
 
     var logMessage = "Logging Message - Don't translate me";
     console.log(logMessage);
+
+    
+
 
 
 
