csy-html update

--- a/javascript/lingoport/HelloWorld.html
+++ b/javascript/lingoport/HelloWorld.html
@@ -13,6 +13,9 @@
     document.write("<p>" + "Parsing '2.570', it's a very small number in the U.S, but very large in Europe!")
     document.write(" Result: " + parseFloat("2.570") + "</p>")
 
+    var greeting2 = "Hello2";
+    greeting2 += " World2!";
+    
     var logMessage = "Logging Message - Don't translate me";
     console.log(logMessage);
   </script>
